add getReviews fxn
