# api/swagger/swagger.yaml
@@ -94,7 +94,30 @@ paths:
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"            
+            $ref: "#/definitions/ErrorResponse"
+  /restaurants/{id}/reviews:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: restaurants
+    x-a127-apply: {}
+    get:
+      description: Returns a list of reviews for a specific restaurant
+      # used as the method name of the controller
+      operationId: getReviews
+      parameters:
+        - name: id
+          in: path
+          description: The restID of the restaurant
+          required: true
+          type: number
+      responses:
+        "200":
+          description: Success
+          schema: {}
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
